[package]
name = "orb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
revm = { version = "10.0.0", features = ["ethersdb", "std", "serde-json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
toml = "0.8.0"
